# rossmann-store-sales

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01-raw-exploratory-analysis.ipynb
rossmann_store_sales_project/: __init__.py  app.py
rossmann_store_sales_project/features/: build_features.py
rossmann_store_sales_project/models/: api.py  train.py  train_model.py
scripts/: make_dataset.py  run_optuna.py
scripts/.ipynb_checkpoints/: rossmann-store-sales-checkpoint.ipynb
tests/: test_build_features.py  test_train_model.py
