[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rossmann_store_sales_project"
version = "0.0.1"
description = "A professional data science project to predict Rossmann store sales."
authors = [
  { name = "Data Scientist" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["rossmann_store_sales_project"]
include = ["pyproject.toml", "rossmann_store_sales_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rossmann_store_sales_project"]
force-sort-within-sections = true

